{
    "name": "InputAction",
    "maps": [
        {
            "name": "NTS",
            "id": "ab99df42-d14e-4c0d-91a3-2760bc9038d2",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "75454e6a-2d72-414d-8807-b99701081bb3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPos",
                    "type": "PassThrough",
                    "id": "cee504bd-f93b-4544-b981-6fca17e16d6b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a5521c9-c0fe-437e-8760-89fcf228430d",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a844e473-e18f-4803-9b3e-84e5fa20daa7",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}